Update lat lons embankments

--- a/Scrapers/FRIMS_Daily_Reports_Scraper/FRIMS_InformationExtraction_2023.ipynb
+++ b/Scrapers/FRIMS_Daily_Reports_Scraper/FRIMS_InformationExtraction_2023.ipynb
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "082e190e",
+   "id": "877e76f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "481b66c2",
+   "id": "4ff4f626",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "fa356fdd",
+   "id": "e08c0b6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "62e7ff75",
+   "id": "1ed9cddd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "7c538d8c",
+   "id": "d75a9362",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "a49ee7d4",
+   "id": "e1ed7399",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -927,7 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "e3024d7f",
+   "id": "8d008364",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "4f52a2b0",
+   "id": "0d22d847",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1245,7 +1245,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "7288b37e",
+   "id": "5c766531",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1256,7 +1256,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "840c605e",
+   "id": "4cfcb40f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1270,7 +1270,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "4553e660",
+   "id": "78432eca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1298,7 +1298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10e4a539",
+   "id": "7ab331ef",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1306,7 +1306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f03d243",
+   "id": "85706de4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1314,75 +1314,146 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66704a3a",
+   "id": "fd29e101",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b832053e",
+   "cell_type": "markdown",
+   "id": "da33ba4b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Lat-Lons"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 333,
    "id": "998423c4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "embankments_breached_df = pd.read_csv('Data_2023/Cleaned Data/FRIMS_EMBANKMENTS_BREACHED_MASTER_2023.csv')"
+    "df = pd.read_csv('Data_2023/Cleaned Data/FRIMS_ROADS_DAMAGED_MASTER_2023.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 362,
    "id": "8953a43f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "longitudes_list = []\n",
-    "latitudes_list = []\n",
     "\n",
-    "for idx, row in embankments_breached_df.iterrows():\n",
+    "dates_list = []\n",
+    "locs_list = []\n",
+    "\n",
+    "for idx, row in df.iterrows():\n",
     "    details = row['Details']\n",
-    "    long_lats = re.findall('\\d{2}\\.\\d{6}', details)\n",
-    "    longitudes = list(filter(lambda x: float(x) > 40, long_lats))\n",
-    "    longitudes_list.append(longitudes)\n",
-    "    \n",
-    "    latitudes = list(filter(lambda x: float(x) < 40, long_lats))\n",
-    "    latitudes_list.append(latitudes)"
+    "    long_lats = re.findall('\\d{1,2}\\.\\d{6}', details)\n",
+    "    locs_list.append(long_lats)\n",
+    "    #long_lats = [x for x in long_lats if float(x) != 0]\n",
+    "    dates = [row['Date']]*len(long_lats)\n",
+    "    dates_list.append(dates)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
-   "id": "3217be8d",
+   "execution_count": 378,
+   "id": "170cac14",
    "metadata": {},
    "outputs": [],
    "source": [
-    "longitudes_list = flatten_list(longitudes_list)\n",
-    "latitudes_list = flatten_list(latitudes_list)"
+    "longitudes = []\n",
+    "latitudes = []\n",
+    "\n",
+    "for loc in flatten_list(locs_list):\n",
+    "    if float(loc)==0:\n",
+    "        pass\n",
+    "    elif float(loc) < 80:\n",
+    "        latitudes.append(loc)\n",
+    "    else:\n",
+    "        longitudes.append(loc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 379,
+   "id": "c290f34b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "561"
+      ]
+     },
+     "execution_count": 379,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(longitudes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 380,
+   "id": "c38eb038",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "562"
+      ]
+     },
+     "execution_count": 380,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(latitudes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 368,
+   "id": "89b32a15",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1530"
+      ]
+     },
+     "execution_count": 368,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(flatten_list(dates_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
    "id": "f29e9a96",
    "metadata": {},
    "outputs": [],
    "source": [
-    "breaches_lat_lon_df = pd.DataFrame([longitudes_list,latitudes_list]).T\n",
-    "breaches_lat_lon_df.columns = ['Longitude', 'Latitude']\n",
-    "breaches_lat_lon_df.to_csv('Data_2023/Cleaned Data/LAT_LONS_FRIMS_EMBANKMENTS_BREACHED_MASTER_2023.csv')"
+    "breaches_lat_lon_df = pd.DataFrame([dates_list, longitudes_list,latitudes_list]).T\n",
+    "breaches_lat_lon_df.columns = ['Date', 'Longitude', 'Latitude']\n",
+    "breaches_lat_lon_df.to_csv('Data_2023/Cleaned Data/LAT_LONS_FRIMS_ROADS_DAMAGED_MASTER_2023.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 353,
    "id": "acfc52b7",
    "metadata": {},
    "outputs": [],
@@ -1399,11 +1470,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 246,
    "id": "db8082ef",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Latitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-06-11</td>\n",
+       "      <td>93.692991</td>\n",
+       "      <td>26.929787</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023-06-12</td>\n",
+       "      <td>93.628575</td>\n",
+       "      <td>26.906926</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023-06-12</td>\n",
+       "      <td>93.613828</td>\n",
+       "      <td>26.882800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023-06-12</td>\n",
+       "      <td>93.733003</td>\n",
+       "      <td>26.909405</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023-06-12</td>\n",
+       "      <td>93.732312</td>\n",
+       "      <td>26.914872</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>556</th>\n",
+       "      <td>2023-06-25</td>\n",
+       "      <td>90.850761</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>557</th>\n",
+       "      <td>2023-06-25</td>\n",
+       "      <td>90.826664</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>558</th>\n",
+       "      <td>2023-06-25</td>\n",
+       "      <td>90.859797</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>559</th>\n",
+       "      <td>2023-06-25</td>\n",
+       "      <td>90.848786</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>560</th>\n",
+       "      <td>2023-06-25</td>\n",
+       "      <td>90.803956</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>561 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Date  Longitude   Latitude\n",
+       "0    2023-06-11  93.692991  26.929787\n",
+       "1    2023-06-12  93.628575  26.906926\n",
+       "2    2023-06-12  93.613828  26.882800\n",
+       "3    2023-06-12  93.733003  26.909405\n",
+       "4    2023-06-12  93.732312  26.914872\n",
+       "..          ...        ...        ...\n",
+       "556  2023-06-25  90.850761       None\n",
+       "557  2023-06-25  90.826664       None\n",
+       "558  2023-06-25  90.859797       None\n",
+       "559  2023-06-25  90.848786       None\n",
+       "560  2023-06-25  90.803956       None\n",
+       "\n",
+       "[561 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 246,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "breaches_lat_lon_df"
+   ]
   },
   {
    "cell_type": "code",
