--- a/Scrapers/FRIMS_Daily_Reports_Scraper/FRIMS_2023_DailyScrapers.ipynb
+++ b/Scrapers/FRIMS_Daily_Reports_Scraper/FRIMS_2023_DailyScrapers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f3728c2b",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,19 @@
     "\n",
     "from joblib import Parallel, delayed\n",
     "import multiprocessing as mp\n",
-    "from multiprocessing.pool import ThreadPool"
+    "from multiprocessing.pool import ThreadPool\n",
+    "\n",
+    "import geopandas as gpd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "124a65a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assam_districts = gpd.read_file('Data/Assam_Maps/assam_district_35.csv')\n"
    ]
   },
   {
@@ -42,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "8a34c3ca",
    "metadata": {},
    "outputs": [],
@@ -57,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "81dbf4f3",
    "metadata": {},
    "outputs": [],
@@ -93,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "3070b624",
    "metadata": {},
    "outputs": [],
@@ -195,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "060df38a",
    "metadata": {},
    "outputs": [],
@@ -210,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "fa83751a",
    "metadata": {},
    "outputs": [],
@@ -230,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "a5f67c22",
    "metadata": {},
    "outputs": [],
@@ -249,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "ad32ccf4",
    "metadata": {},
    "outputs": [
@@ -401,25 +413,7 @@
       "----\n",
       "FRIMS_EMBANKMENTS_AFFECTED\n",
       "----\n",
-      "FRIMS_BRIDGES_DAMAGED\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_8144/1982773773.py:57: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  FRIMS_INFRA_DAMAGES_DF_CLEANED['Date'] = date\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "FRIMS_BRIDGES_DAMAGED\n",
       "----\n",
       "FRIMS_EMBANKMENTS_BREACHED\n",
       "----\n",
@@ -474,7 +468,25 @@
       "19.06.2023\n",
       "FRIMS_ROADS_DAMAGED\n",
       "----\n",
-      "FRIMS_EMBANKMENTS_AFFECTED\n",
+      "FRIMS_EMBANKMENTS_AFFECTED\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_16371/1982773773.py:57: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  FRIMS_INFRA_DAMAGES_DF_CLEANED['Date'] = date\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "----\n",
       "FRIMS_BRIDGES_DAMAGED\n",
       "----\n",
@@ -620,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "258e2557",
    "metadata": {},
    "outputs": [
@@ -671,7 +683,7 @@
        "0                 24-06-2023  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "id": "06abbc59",
    "metadata": {},
    "outputs": [],
@@ -702,13 +714,38 @@
     "    FRIMS_DAMAGES = pd.concat(dfs)\n",
     "    FRIMS_DAMAGES['Date'] = pd.to_datetime(FRIMS_DAMAGES['Date'],format='%d-%m-%Y')\n",
     "    FRIMS_DAMAGES = FRIMS_DAMAGES.sort_values(by='Date')\n",
-    "    FRIMS_DAMAGES.drop_duplicates().dropna().to_csv('Data_2023/Cleaned Data/{}_MASTER_2023.csv'.format(folder_slug), index=False)"
+    "    \n",
+    "    FRIMS_DAMAGES['District'] = FRIMS_DAMAGES.District.str.replace('Dima-Hasao','Dima Hasao',regex=True)\n",
+    "    FRIMS_DAMAGES['District'] = FRIMS_DAMAGES.District.str.upper()\n",
+    "\n",
+    "    FRIMS_DAMAGES.drop_duplicates().dropna().to_csv('Data_2023/Cleaned Data/DISTRICTS_{}_MASTER_2023.csv'.format(folder_slug), index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "127fcf14",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['state', 'district', 'ID', 'assam_dist', 'geometry'], dtype='object')"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "assam_districts.columns"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb4c9c9c",
+   "id": "fbcc2b4f",
    "metadata": {},
    "outputs": [],
    "source": []
