--- a/Scrapers/FRIMS_Daily_Reports_Scraper/FRIMS_2023_DailyScrapers.ipynb
+++ b/Scrapers/FRIMS_Daily_Reports_Scraper/FRIMS_2023_DailyScrapers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f3728c2b",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "124a65a8",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "8a34c3ca",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "81dbf4f3",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "3070b624",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "060df38a",
    "metadata": {},
    "outputs": [],
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "fa83751a",
    "metadata": {},
    "outputs": [],
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "a5f67c22",
    "metadata": {},
    "outputs": [],
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "ad32ccf4",
    "metadata": {},
    "outputs": [
@@ -468,14 +468,16 @@
       "19.06.2023\n",
       "FRIMS_ROADS_DAMAGED\n",
       "----\n",
-      "FRIMS_EMBANKMENTS_AFFECTED\n"
+      "FRIMS_EMBANKMENTS_AFFECTED\n",
+      "----\n",
+      "FRIMS_BRIDGES_DAMAGED\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_16371/1982773773.py:57: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_5749/1982773773.py:57: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -487,8 +489,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "----\n",
-      "FRIMS_BRIDGES_DAMAGED\n",
       "----\n",
       "FRIMS_EMBANKMENTS_BREACHED\n",
       "No data for:  19-06-2023\n",
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "258e2557",
    "metadata": {},
    "outputs": [
@@ -683,7 +683,7 @@
        "0                 24-06-2023  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "id": "06abbc59",
    "metadata": {},
    "outputs": [],
@@ -723,23 +723,318 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "127fcf14",
+   "execution_count": null,
+   "id": "a58b10bf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "39b08aa6",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>District</th>\n",
+       "      <th>Number</th>\n",
+       "      <th>Details</th>\n",
+       "      <th>state</th>\n",
+       "      <th>ID</th>\n",
+       "      <th>assam_dist</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-06-11</td>\n",
+       "      <td>BISWANATH</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Gohpur - Kukurjan River Embankment near about ...</td>\n",
+       "      <td>ASSAM</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2019Bisw</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023-06-12</td>\n",
+       "      <td>BISWANATH</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Gohpur - Dubia River Embankments is breached f...</td>\n",
+       "      <td>ASSAM</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2019Bisw</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023-06-22</td>\n",
+       "      <td>BISWANATH</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Gohpur - Chatrang river R/Bank embankment brea...</td>\n",
+       "      <td>ASSAM</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2019Bisw</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023-06-23</td>\n",
+       "      <td>BISWANATH</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Gohpur - Chatrang P&amp;R D Bund | At L/Bank or Ri...</td>\n",
+       "      <td>ASSAM</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2019Bisw</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023-06-12</td>\n",
+       "      <td>LAKHIMPUR</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Nowboicha - Embankment at Pabha Nadi River nea...</td>\n",
+       "      <td>ASSAM</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2011Lakh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2023-06-14</td>\n",
+       "      <td>LAKHIMPUR</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Nowboicha - Breached occurred at Singra River ...</td>\n",
+       "      <td>ASSAM</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2011Lakh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2023-06-16</td>\n",
+       "      <td>LAKHIMPUR</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Narayanpur - Farm bundh L/S-175 m R/S-175 m | ...</td>\n",
+       "      <td>ASSAM</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2011Lakh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2023-06-12</td>\n",
+       "      <td>DARRANG</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Mangaldoi - Afflux Bund at Noanadi Kachia Bund...</td>\n",
+       "      <td>ASSAM</td>\n",
+       "      <td>26</td>\n",
+       "      <td>2011Darr</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2023-06-17</td>\n",
+       "      <td>DARRANG</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Mangaldoi - Approach Road in Noanadi Kachia Bu...</td>\n",
+       "      <td>ASSAM</td>\n",
+       "      <td>26</td>\n",
+       "      <td>2011Darr</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2023-06-22</td>\n",
+       "      <td>DARRANG</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Mangaldoi - Breached at u/s afflux bund cum ro...</td>\n",
+       "      <td>ASSAM</td>\n",
+       "      <td>26</td>\n",
+       "      <td>2011Darr</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2023-06-25</td>\n",
+       "      <td>DARRANG</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Mangaldoi - CM Dutta | At village Mollapara | ...</td>\n",
+       "      <td>ASSAM</td>\n",
+       "      <td>26</td>\n",
+       "      <td>2011Darr</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2023-06-15</td>\n",
+       "      <td>GOALPARA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Matia - Dohapara Bamunpara Bandh | Bamunpara |...</td>\n",
+       "      <td>ASSAM</td>\n",
+       "      <td>16</td>\n",
+       "      <td>2011Goal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2023-06-16</td>\n",
+       "      <td>UDALGURI</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Harisinga - No. 2 Singrimari Suklai river emba...</td>\n",
+       "      <td>ASSAM</td>\n",
+       "      <td>21</td>\n",
+       "      <td>2011Udal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2023-06-17</td>\n",
+       "      <td>UDALGURI</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Kalaigaon - Embankment at Majarchuba in the L/...</td>\n",
+       "      <td>ASSAM</td>\n",
+       "      <td>21</td>\n",
+       "      <td>2011Udal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2023-06-20</td>\n",
+       "      <td>UDALGURI</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Harisinga - Dahalahabi embankment | Dahalahabi...</td>\n",
+       "      <td>ASSAM</td>\n",
+       "      <td>21</td>\n",
+       "      <td>2011Udal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2023-06-17</td>\n",
+       "      <td>SONITPUR</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Chariduar - 1 no embankment breached on DTD 17...</td>\n",
+       "      <td>ASSAM</td>\n",
+       "      <td>25</td>\n",
+       "      <td>2011Soni</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2023-06-17</td>\n",
+       "      <td>NAGAON</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Kampur - Premajaan Embankment at Saibuk Gaon |...</td>\n",
+       "      <td>ASSAM</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2011Naga</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2023-06-21</td>\n",
+       "      <td>BAKSA</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Barama - Breach occurred on L/B of Mora Paglad...</td>\n",
+       "      <td>ASSAM</td>\n",
+       "      <td>35</td>\n",
+       "      <td>2011Baks</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2023-06-21</td>\n",
+       "      <td>NALBARI</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Tihu - ROAD CUM EMBANMENT,R/B MORA PAGOLDIA RI...</td>\n",
+       "      <td>ASSAM</td>\n",
+       "      <td>19</td>\n",
+       "      <td>2011Nalb</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>2023-06-22</td>\n",
+       "      <td>NALBARI</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Nalbari - Pagaldia river at Nalbari sonkuriha ...</td>\n",
+       "      <td>ASSAM</td>\n",
+       "      <td>19</td>\n",
+       "      <td>2011Nalb</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>2023-06-22</td>\n",
+       "      <td>BAJALI</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Bajali - Pahumara river breached at left bank ...</td>\n",
+       "      <td>ASSAM</td>\n",
+       "      <td>33</td>\n",
+       "      <td>2022Baja</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Index(['state', 'district', 'ID', 'assam_dist', 'geometry'], dtype='object')"
+       "         Date   District  Number  \\\n",
+       "0  2023-06-11  BISWANATH       1   \n",
+       "1  2023-06-12  BISWANATH       1   \n",
+       "2  2023-06-22  BISWANATH       1   \n",
+       "3  2023-06-23  BISWANATH       1   \n",
+       "4  2023-06-12  LAKHIMPUR       1   \n",
+       "5  2023-06-14  LAKHIMPUR       2   \n",
+       "6  2023-06-16  LAKHIMPUR       2   \n",
+       "7  2023-06-12    DARRANG       3   \n",
+       "8  2023-06-17    DARRANG       2   \n",
+       "9  2023-06-22    DARRANG       1   \n",
+       "10 2023-06-25    DARRANG       3   \n",
+       "11 2023-06-15   GOALPARA       1   \n",
+       "12 2023-06-16   UDALGURI       2   \n",
+       "13 2023-06-17   UDALGURI       1   \n",
+       "14 2023-06-20   UDALGURI       1   \n",
+       "15 2023-06-17   SONITPUR       1   \n",
+       "16 2023-06-17     NAGAON       1   \n",
+       "17 2023-06-21      BAKSA       3   \n",
+       "18 2023-06-21    NALBARI       1   \n",
+       "19 2023-06-22    NALBARI       1   \n",
+       "20 2023-06-22     BAJALI       7   \n",
+       "\n",
+       "                                              Details  state  ID assam_dist  \n",
+       "0   Gohpur - Kukurjan River Embankment near about ...  ASSAM  24   2019Bisw  \n",
+       "1   Gohpur - Dubia River Embankments is breached f...  ASSAM  24   2019Bisw  \n",
+       "2   Gohpur - Chatrang river R/Bank embankment brea...  ASSAM  24   2019Bisw  \n",
+       "3   Gohpur - Chatrang P&R D Bund | At L/Bank or Ri...  ASSAM  24   2019Bisw  \n",
+       "4   Nowboicha - Embankment at Pabha Nadi River nea...  ASSAM  15   2011Lakh  \n",
+       "5   Nowboicha - Breached occurred at Singra River ...  ASSAM  15   2011Lakh  \n",
+       "6   Narayanpur - Farm bundh L/S-175 m R/S-175 m | ...  ASSAM  15   2011Lakh  \n",
+       "7   Mangaldoi - Afflux Bund at Noanadi Kachia Bund...  ASSAM  26   2011Darr  \n",
+       "8   Mangaldoi - Approach Road in Noanadi Kachia Bu...  ASSAM  26   2011Darr  \n",
+       "9   Mangaldoi - Breached at u/s afflux bund cum ro...  ASSAM  26   2011Darr  \n",
+       "10  Mangaldoi - CM Dutta | At village Mollapara | ...  ASSAM  26   2011Darr  \n",
+       "11  Matia - Dohapara Bamunpara Bandh | Bamunpara |...  ASSAM  16   2011Goal  \n",
+       "12  Harisinga - No. 2 Singrimari Suklai river emba...  ASSAM  21   2011Udal  \n",
+       "13  Kalaigaon - Embankment at Majarchuba in the L/...  ASSAM  21   2011Udal  \n",
+       "14  Harisinga - Dahalahabi embankment | Dahalahabi...  ASSAM  21   2011Udal  \n",
+       "15  Chariduar - 1 no embankment breached on DTD 17...  ASSAM  25   2011Soni  \n",
+       "16  Kampur - Premajaan Embankment at Saibuk Gaon |...  ASSAM  11   2011Naga  \n",
+       "17  Barama - Breach occurred on L/B of Mora Paglad...  ASSAM  35   2011Baks  \n",
+       "18  Tihu - ROAD CUM EMBANMENT,R/B MORA PAGOLDIA RI...  ASSAM  19   2011Nalb  \n",
+       "19  Nalbari - Pagaldia river at Nalbari sonkuriha ...  ASSAM  19   2011Nalb  \n",
+       "20  Bajali - Pahumara river breached at left bank ...  ASSAM  33   2022Baja  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "assam_districts.columns"
+    "pd.merge(FRIMS_DAMAGES,assam_districts).drop('geometry', axis=1)"
    ]
   },
   {
@@ -748,7 +1043,9 @@
    "id": "fbcc2b4f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Mangaldoi - CM Dutta Bund FIS | At village Mollapara | As reported by Dept. embankment breach occurred at Main Canal of CM Dutta Bund FIS at Ch 8700m. Approx. length of damage is 10-12m. Dated 24/04/2023. | (Long - 91.994520, Lat - 26.444710, Dept – Irrigation), CM Dutta Bund FIS | At village Bezpara | As reported by Dept. embankment breach occurred at Main Canal of CM Dutta Bund FIS at Ch 10500m. Approx. length of damage is 10-11m. Dated 24/04/2023. | (Long - 91.994520, Lat - 26.444710, Dept – Irrigation), CM Dutta Bund FIS | At village Mollapara | As reported by Dept. embankment breach occurred at Main Canal of CM Dutta Bund FIS at Ch 8800m. Approx. length of damage is 5-6m. Dated 24/04/2023. | (Long - 91.994500, Lat - 26.444700, Dept – Irrigation), CM Dutta Bund FIS | At village Bezpara | As reported by Dept. embankment breach occurred at Main Canal of CM Dutta Bund FIS at Ch 10470m. Approx. length of damage is 6-7m. Dated 24/04/2023. | (Long - 91.994520, Lat - 26.444710, Dept – Irrigation)\n"
+   ]
   }
  ],
  "metadata": {
