UPDATE FFS - Added danger level

--- a/Sources/FFS/scripts/Waterlevel_FFS.ipynb
+++ b/Sources/FFS/scripts/Waterlevel_FFS.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "e1280571",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "3598df26",
    "metadata": {},
    "outputs": [],
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "fb7cdfa5",
    "metadata": {},
    "outputs": [
@@ -415,7 +415,7 @@
        "[5 rows x 68 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,17 +428,269 @@
     "r = requests.get(station_details_url,verify=False)\n",
     "txt = r.json()\n",
     "station_details_df = pd.DataFrame(txt)\n",
-    "station_details_df.head()\n"
+    "station_details_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "607c0cc3",
+   "execution_count": null,
+   "id": "5c746a7e",
    "metadata": {},
    "outputs": [],
    "source": [
     "station_details_df.to_csv('/home/krishna/IDS-DRR-Data-Pipeline/Sources/FFS/data/station_details.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "607c0cc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/krishna/anaconda3/lib/python3.9/site-packages/urllib3/connectionpool.py:1045: InsecureRequestWarning: Unverified HTTPS request is being made to host 'ffs.india-water.gov.in'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/1.26.x/advanced-usage.html#ssl-warnings\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>@class</th>\n",
+       "      <th>stationCode</th>\n",
+       "      <th>dangerLevel</th>\n",
+       "      <th>dlEndDate</th>\n",
+       "      <th>dlStartDate</th>\n",
+       "      <th>frl</th>\n",
+       "      <th>frlEndDate</th>\n",
+       "      <th>frlStartDate</th>\n",
+       "      <th>highestFlowLevel</th>\n",
+       "      <th>highestFlowLevelDate</th>\n",
+       "      <th>...</th>\n",
+       "      <th>mwlStartDate</th>\n",
+       "      <th>nearestTown</th>\n",
+       "      <th>savedAt</th>\n",
+       "      <th>type</th>\n",
+       "      <th>warningLevel</th>\n",
+       "      <th>wlEndDate</th>\n",
+       "      <th>wlStartDate</th>\n",
+       "      <th>floodForecastStaticBangladeshReportStationCode</th>\n",
+       "      <th>layerStationStationCode</th>\n",
+       "      <th>meteorologicalSubdivisionId</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>com.eptisa.dto.SimpleFloodForecastStaticDto</td>\n",
+       "      <td>038-CDJAPR</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>316.00</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>...</td>\n",
+       "      <td>None</td>\n",
+       "      <td></td>\n",
+       "      <td>2018-06-04</td>\n",
+       "      <td>Inflow</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>038-CDJAPR</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>com.eptisa.dto.SimpleFloodForecastStaticDto</td>\n",
+       "      <td>018-UGDHYD</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>523.60</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Sangareddy</td>\n",
+       "      <td>2014-05-20</td>\n",
+       "      <td>Inflow</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>018-UGDHYD</td>\n",
+       "      <td>17.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>com.eptisa.dto.SimpleFloodForecastStaticDto</td>\n",
+       "      <td>041-CDJAPR</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>258.62</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>...</td>\n",
+       "      <td>None</td>\n",
+       "      <td></td>\n",
+       "      <td>2018-06-04</td>\n",
+       "      <td>Inflow</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>041-CDJAPR</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>com.eptisa.dto.SimpleFloodForecastStaticDto</td>\n",
+       "      <td>018MAHGAND</td>\n",
+       "      <td>192.24</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>189.59</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>...</td>\n",
+       "      <td>None</td>\n",
+       "      <td></td>\n",
+       "      <td>2014-06-04</td>\n",
+       "      <td>Inflow</td>\n",
+       "      <td>187.06</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>018MAHGAND</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>com.eptisa.dto.SimpleFloodForecastStaticDto</td>\n",
+       "      <td>017-WGDNGP</td>\n",
+       "      <td>174.00</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>176.45</td>\n",
+       "      <td>1986-08-14</td>\n",
+       "      <td>...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Balharsha</td>\n",
+       "      <td>2014-05-21</td>\n",
+       "      <td>Level</td>\n",
+       "      <td>171.50</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2013-07-17</td>\n",
+       "      <td>None</td>\n",
+       "      <td>017-WGDNGP</td>\n",
+       "      <td>33.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        @class stationCode  dangerLevel  \\\n",
+       "0  com.eptisa.dto.SimpleFloodForecastStaticDto  038-CDJAPR          NaN   \n",
+       "1  com.eptisa.dto.SimpleFloodForecastStaticDto  018-UGDHYD          NaN   \n",
+       "2  com.eptisa.dto.SimpleFloodForecastStaticDto  041-CDJAPR          NaN   \n",
+       "3  com.eptisa.dto.SimpleFloodForecastStaticDto  018MAHGAND       192.24   \n",
+       "4  com.eptisa.dto.SimpleFloodForecastStaticDto  017-WGDNGP       174.00   \n",
+       "\n",
+       "  dlEndDate dlStartDate     frl frlEndDate frlStartDate  highestFlowLevel  \\\n",
+       "0      None        None  316.00       None         None               NaN   \n",
+       "1      None        None  523.60       None         None               NaN   \n",
+       "2      None        None  258.62       None         None               NaN   \n",
+       "3      None        None  189.59       None         None               NaN   \n",
+       "4      None        None     NaN       None         None            176.45   \n",
+       "\n",
+       "  highestFlowLevelDate  ... mwlStartDate nearestTown     savedAt    type  \\\n",
+       "0                 None  ...         None              2018-06-04  Inflow   \n",
+       "1                 None  ...         None  Sangareddy  2014-05-20  Inflow   \n",
+       "2                 None  ...         None              2018-06-04  Inflow   \n",
+       "3                 None  ...         None              2014-06-04  Inflow   \n",
+       "4           1986-08-14  ...         None   Balharsha  2014-05-21   Level   \n",
+       "\n",
+       "  warningLevel wlEndDate wlStartDate  \\\n",
+       "0          NaN      None        None   \n",
+       "1          NaN      None        None   \n",
+       "2          NaN      None        None   \n",
+       "3       187.06      None        None   \n",
+       "4       171.50      None  2013-07-17   \n",
+       "\n",
+       "  floodForecastStaticBangladeshReportStationCode  layerStationStationCode  \\\n",
+       "0                                           None               038-CDJAPR   \n",
+       "1                                           None               018-UGDHYD   \n",
+       "2                                           None               041-CDJAPR   \n",
+       "3                                           None               018MAHGAND   \n",
+       "4                                           None               017-WGDNGP   \n",
+       "\n",
+       "  meteorologicalSubdivisionId  \n",
+       "0                         NaN  \n",
+       "1                        17.0  \n",
+       "2                         NaN  \n",
+       "3                         2.0  \n",
+       "4                        33.0  \n",
+       "\n",
+       "[5 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r = requests.get(station_more_details_url,verify=False)\n",
+    "txt = r.json()\n",
+    "station_more_details_df = pd.DataFrame(txt)\n",
+    "station_more_details_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b68b35ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "station_more_details_df.to_csv('/home/krishna/IDS-DRR-Data-Pipeline/Sources/FFS/data/station_more_details.csv',index=False)"
    ]
   },
   {
