--- a/Sources/ANTYODAYA/scripts/Transformer.ipynb
+++ b/Sources/ANTYODAYA/scripts/Transformer.ipynb
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7322adf3",
+   "id": "96aa79ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "28524db0",
+   "id": "87fe6b2c",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "da64934c",
+   "id": "9bdaaeab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "cd49f847",
+   "id": "ec71b9ec",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d3732869",
+   "id": "9e07e7d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "41c3a16f",
+   "id": "9601ed66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2962,7 +2962,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "a3b13403",
+   "id": "4c03c1a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2972,7 +2972,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "40d3b5d8",
+   "id": "5bff479a",
    "metadata": {},
    "outputs": [
     {
@@ -3122,26 +3122,319 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 89,
    "id": "62575b00",
    "metadata": {},
    "outputs": [],
    "source": [
-    "antyodaya_master_df.to_csv('antyodaya_master.csv')"
+    "antyodaya_master_df.drop('geometry',axis=1).to_csv('/home/krishna/IDS-DRR-Data-Pipeline/Sources/ANTYODAYA/output/antyodaya_master.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "22d90d1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>revenue_ci</th>\n",
+       "      <th>district_3</th>\n",
+       "      <th>object_id</th>\n",
+       "      <th>district_1</th>\n",
+       "      <th>revenue_cr</th>\n",
+       "      <th>HQ</th>\n",
+       "      <th>area</th>\n",
+       "      <th>are_new</th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>net_sown_area_in_hac</th>\n",
+       "      <th>avg_electricity</th>\n",
+       "      <th>avg_tele</th>\n",
+       "      <th>rc_piped_hhds_pct</th>\n",
+       "      <th>rc_nosanitation_hhds_pct</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Gossaigaon (Pt)</td>\n",
+       "      <td>KOKRAJHAR</td>\n",
+       "      <td>101</td>\n",
+       "      <td>Kokrajhar</td>\n",
+       "      <td>Gossaigaon (Pt)</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1.068572e+09</td>\n",
+       "      <td>1069</td>\n",
+       "      <td>MULTIPOLYGON (((90.14118 26.74010, 90.15342 26...</td>\n",
+       "      <td>32583.05000</td>\n",
+       "      <td>6.095781</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.937283</td>\n",
+       "      <td>20.164813</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bhowraguri</td>\n",
+       "      <td>KOKRAJHAR</td>\n",
+       "      <td>102</td>\n",
+       "      <td>Kokrajhar</td>\n",
+       "      <td>Bhawraguri</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1.588926e+08</td>\n",
+       "      <td>159</td>\n",
+       "      <td>MULTIPOLYGON (((90.09811 26.46455, 90.10012 26...</td>\n",
+       "      <td>2199.40000</td>\n",
+       "      <td>4.942837</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.039628</td>\n",
+       "      <td>14.543293</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Dotoma</td>\n",
+       "      <td>KOKRAJHAR</td>\n",
+       "      <td>103</td>\n",
+       "      <td>Kokrajhar</td>\n",
+       "      <td>Dotoma</td>\n",
+       "      <td>None</td>\n",
+       "      <td>3.039662e+08</td>\n",
+       "      <td>304</td>\n",
+       "      <td>MULTIPOLYGON (((90.19819 26.63409, 90.21635 26...</td>\n",
+       "      <td>18388.48500</td>\n",
+       "      <td>9.160277</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.853985</td>\n",
+       "      <td>20.103909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Kokrajhar (Pt)</td>\n",
+       "      <td>KOKRAJHAR</td>\n",
+       "      <td>104</td>\n",
+       "      <td>Kokrajhar</td>\n",
+       "      <td>Kokrajhar (Pt)</td>\n",
+       "      <td>y</td>\n",
+       "      <td>9.902467e+08</td>\n",
+       "      <td>990</td>\n",
+       "      <td>MULTIPOLYGON (((90.33590 26.86280, 90.33610 26...</td>\n",
+       "      <td>21680.64300</td>\n",
+       "      <td>9.333861</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.356427</td>\n",
+       "      <td>22.650655</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bagribari (Pt)</td>\n",
+       "      <td>KOKRAJHAR</td>\n",
+       "      <td>105</td>\n",
+       "      <td>Kokrajhar</td>\n",
+       "      <td>Bagribari (Pt)</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2.810115e+08</td>\n",
+       "      <td>281</td>\n",
+       "      <td>MULTIPOLYGON (((89.99553 26.35026, 89.99717 26...</td>\n",
+       "      <td>554.41709</td>\n",
+       "      <td>8.971088</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>27.940760</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>175</th>\n",
+       "      <td>Sapekhati</td>\n",
+       "      <td>CHARAIDEO</td>\n",
+       "      <td>278</td>\n",
+       "      <td>Charaideo</td>\n",
+       "      <td>Sapekhati</td>\n",
+       "      <td>None</td>\n",
+       "      <td>3.943284e+08</td>\n",
+       "      <td>394</td>\n",
+       "      <td>MULTIPOLYGON (((95.10936 27.12364, 95.10927 27...</td>\n",
+       "      <td>6195.96000</td>\n",
+       "      <td>8.264611</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.388635</td>\n",
+       "      <td>32.441541</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176</th>\n",
+       "      <td>Sonari</td>\n",
+       "      <td>CHARAIDEO</td>\n",
+       "      <td>279</td>\n",
+       "      <td>Charaideo</td>\n",
+       "      <td>Sonari</td>\n",
+       "      <td>y</td>\n",
+       "      <td>3.845428e+08</td>\n",
+       "      <td>385</td>\n",
+       "      <td>MULTIPOLYGON (((94.95742 27.06354, 94.95822 27...</td>\n",
+       "      <td>4235.76000</td>\n",
+       "      <td>9.165350</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6.963489</td>\n",
+       "      <td>8.543746</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>177</th>\n",
+       "      <td>Ujani Majuli</td>\n",
+       "      <td>MAJULI</td>\n",
+       "      <td>280</td>\n",
+       "      <td>Majuli</td>\n",
+       "      <td>Ujani Majuli</td>\n",
+       "      <td>None</td>\n",
+       "      <td>3.221681e+08</td>\n",
+       "      <td>322</td>\n",
+       "      <td>MULTIPOLYGON (((94.33804 26.89186, 94.33850 26...</td>\n",
+       "      <td>5732.95000</td>\n",
+       "      <td>9.266322</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.092902</td>\n",
+       "      <td>28.358816</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178</th>\n",
+       "      <td>Majuli</td>\n",
+       "      <td>MAJULI</td>\n",
+       "      <td>281</td>\n",
+       "      <td>Majuli</td>\n",
+       "      <td>Majuli</td>\n",
+       "      <td>None</td>\n",
+       "      <td>6.484667e+08</td>\n",
+       "      <td>648</td>\n",
+       "      <td>MULTIPOLYGON (((94.56453 27.18172, 94.56755 27...</td>\n",
+       "      <td>10909.71000</td>\n",
+       "      <td>9.435180</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>7.813776</td>\n",
+       "      <td>6.202922</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>179</th>\n",
+       "      <td>Phuloni</td>\n",
+       "      <td>K.ANGLONG</td>\n",
+       "      <td>275</td>\n",
+       "      <td>K.ANGLONG</td>\n",
+       "      <td>Phuloni</td>\n",
+       "      <td>None</td>\n",
+       "      <td>3.303172e+09</td>\n",
+       "      <td>3303</td>\n",
+       "      <td>MULTIPOLYGON (((92.88407 26.38783, 92.88894 26...</td>\n",
+       "      <td>17872.63000</td>\n",
+       "      <td>5.961561</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.213326</td>\n",
+       "      <td>24.763349</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>180 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          revenue_ci district_3  object_id district_1       revenue_cr    HQ  \\\n",
+       "0    Gossaigaon (Pt)  KOKRAJHAR        101  Kokrajhar  Gossaigaon (Pt)  None   \n",
+       "1         Bhowraguri  KOKRAJHAR        102  Kokrajhar       Bhawraguri  None   \n",
+       "2             Dotoma  KOKRAJHAR        103  Kokrajhar           Dotoma  None   \n",
+       "3     Kokrajhar (Pt)  KOKRAJHAR        104  Kokrajhar   Kokrajhar (Pt)     y   \n",
+       "4     Bagribari (Pt)  KOKRAJHAR        105  Kokrajhar   Bagribari (Pt)  None   \n",
+       "..               ...        ...        ...        ...              ...   ...   \n",
+       "175        Sapekhati  CHARAIDEO        278  Charaideo        Sapekhati  None   \n",
+       "176           Sonari  CHARAIDEO        279  Charaideo           Sonari     y   \n",
+       "177     Ujani Majuli     MAJULI        280     Majuli     Ujani Majuli  None   \n",
+       "178           Majuli     MAJULI        281     Majuli           Majuli  None   \n",
+       "179          Phuloni  K.ANGLONG        275  K.ANGLONG          Phuloni  None   \n",
+       "\n",
+       "             area  are_new                                           geometry  \\\n",
+       "0    1.068572e+09     1069  MULTIPOLYGON (((90.14118 26.74010, 90.15342 26...   \n",
+       "1    1.588926e+08      159  MULTIPOLYGON (((90.09811 26.46455, 90.10012 26...   \n",
+       "2    3.039662e+08      304  MULTIPOLYGON (((90.19819 26.63409, 90.21635 26...   \n",
+       "3    9.902467e+08      990  MULTIPOLYGON (((90.33590 26.86280, 90.33610 26...   \n",
+       "4    2.810115e+08      281  MULTIPOLYGON (((89.99553 26.35026, 89.99717 26...   \n",
+       "..            ...      ...                                                ...   \n",
+       "175  3.943284e+08      394  MULTIPOLYGON (((95.10936 27.12364, 95.10927 27...   \n",
+       "176  3.845428e+08      385  MULTIPOLYGON (((94.95742 27.06354, 94.95822 27...   \n",
+       "177  3.221681e+08      322  MULTIPOLYGON (((94.33804 26.89186, 94.33850 26...   \n",
+       "178  6.484667e+08      648  MULTIPOLYGON (((94.56453 27.18172, 94.56755 27...   \n",
+       "179  3.303172e+09     3303  MULTIPOLYGON (((92.88407 26.38783, 92.88894 26...   \n",
+       "\n",
+       "     net_sown_area_in_hac  avg_electricity  avg_tele  rc_piped_hhds_pct  \\\n",
+       "0             32583.05000         6.095781       2.0           0.937283   \n",
+       "1              2199.40000         4.942837       2.0           0.039628   \n",
+       "2             18388.48500         9.160277       2.0           1.853985   \n",
+       "3             21680.64300         9.333861       3.0           3.356427   \n",
+       "4               554.41709         8.971088       2.0           0.000000   \n",
+       "..                    ...              ...       ...                ...   \n",
+       "175            6195.96000         8.264611       2.0           3.388635   \n",
+       "176            4235.76000         9.165350       2.0           6.963489   \n",
+       "177            5732.95000         9.266322       3.0           2.092902   \n",
+       "178           10909.71000         9.435180       2.0           7.813776   \n",
+       "179           17872.63000         5.961561       2.0           1.213326   \n",
+       "\n",
+       "     rc_nosanitation_hhds_pct  \n",
+       "0                   20.164813  \n",
+       "1                   14.543293  \n",
+       "2                   20.103909  \n",
+       "3                   22.650655  \n",
+       "4                   27.940760  \n",
+       "..                        ...  \n",
+       "175                 32.441541  \n",
+       "176                  8.543746  \n",
+       "177                 28.358816  \n",
+       "178                  6.202922  \n",
+       "179                 24.763349  \n",
+       "\n",
+       "[180 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "antyodaya_master_df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22d90d1b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dd1b9091",
+   "id": "999def09",
    "metadata": {},
    "outputs": [],
    "source": []
